--- a/src/main/resources/templates/corp/jobPosting/jobPostingForm.html
+++ b/src/main/resources/templates/corp/jobPosting/jobPostingForm.html
@@ -224,7 +224,7 @@ function getStackList() {
 			})
 			.catch(error => {
 				console.error("기술스택 검색 에러:", error);
-				suggestedList.innerHTML = '<li>오류가 발생했습니다.</li>';
+				suggestedList.innerHTML = '<li>기술 스택 검색 중 오류가 발생했습니다.</li>';
 			});
 	});
 }
