--- a/src/main/resources/templates/user/resume/resume_management.html
+++ b/src/main/resources/templates/user/resume/resume_management.html
@@ -10,55 +10,7 @@
 	th:href="@{/user/resume/css/resume_management.css}" />
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script>
-$(document).ready(function() {
-
-    // 이력서 추가 버튼 클릭 시 새 페이지로 이동
-    $('#addResumeBtn').on('click', function() {
-        window.location.href = '/user/resume/resume_create'; // 이력서 신규 작성
-    });
-
-    // 수정 버튼 클릭 이벤트
-    $(document).on('click', '.edit-btn', function() {
-    	var resumeseq = $(this).data('resumeseq');
-    	window.location.href = '/user/resume/resume_form/' + resumeseq;
-	});
-
-    // 삭제 버튼 클릭 이벤트
-    $(document).on('click', '.delete-btn', function() {
-		var resumeSeq = $(this).data("resumeseq");
-		var card = $(this).closest('.card');
-		
-        if(confirm('이력서를 정말 삭제하시겠습니까?')) {
-            
-        	$.ajax({
-				url : "/user/resume/resumeRemove/" + resumeSeq,
-				type : "POST",
-				success : function(response){
-					if(response == "success"){
-						card.fadeOut(0, function() {
-				        	$(this).remove();
-				   		});
-					}else{
-						alert("삭제에 실패했습니다.");
-					}
-				},
-				
-				error : function(xhr){
-					alert(xhr.status);
-				}
-        	});
-        }
-    });
-
-    // 다운로드 버튼 클릭 이벤트
-    $(document).on('click', '.download-btn', function() {
-        alert('이력서를 다운로드합니다.');
-        // 실제 다운로드 로직 구현
-    });
-    
-});
-</script>
+<script th:src="@{/user/resume/js/resume_management.js}"></script>
 </head>
 <body>
 	<header>
@@ -71,17 +23,14 @@ $(document).ready(function() {
 			<div class="management-section" id="resumeContainer">
 				<!-- 이력서 카드 시작 -->
 				<th:block th:each="resume : ${resumes}">
-					<div class="card">
+					<div class="card" th:attr="data-resumeseq=${resume.resumeSeq}">
 						<span class="card-title" th:text="${resume.title}"></span> <span
 							class="card-subtitle" th:text="|${resume.createdAt} 등록|"></span>
 						<br> <br>
 						<div class="card-actions">
-							<button class="action-btn edit edit-btn"
-								th:attr="data-resumeseq=${resume.resumeSeq}">이력서 수정</button>
-							<button class="action-btn delete delete-btn"
-								th:attr="data-resumeseq=${resume.resumeSeq}">이력서 삭제</button>
-							<button class="action-btn download download-btn"
-								th:attr="data-resumeseq=${resume.resumeSeq}">다운로드</button>
+							<button class="action-btn edit edit-btn">이력서 수정</button>
+							<button class="action-btn delete delete-btn">이력서 삭제</button>
+							<button class="action-btn download download-btn">다운로드</button>
 						</div>
 					</div>
 				</th:block>
@@ -97,13 +46,14 @@ $(document).ready(function() {
 				<p style="color: #6b7280; margin-bottom: 20px;">경험을 보여줄 수 있는
 					포트폴리오 / 경력기술서 등을 첨부해주세요. (PDF를 권장합니다.)</p>
 
+				<!-- 첨부파일 -->
 				<div id="fileListContainer">
 					<th:block th:each="file: ${files}">
-						<div class="file-item">
+						<div class="file-item" th:attr="data-value=${file.attachmentSeq}">
 							<div class="file-info">
 								<div class="file-icon" th:text=${file.fileType}></div>
 								<div class="file-details">
-									<div class="file-name" th:text="${file.fileName}"></div>
+									<div class="file-name download" th:value="${file.attachmentSeq}" th:text="${file.fileName}"></div>
 									<div class="file-date" th:text="${file.createdAt}"></div>
 								</div>
 							</div>
@@ -129,64 +79,6 @@ $(document).ready(function() {
 	</footer>
 </body>
 <script>
-document.addEventListener('DOMContentLoaded', function(){
-	const fileInput = document.getElementById('fileInput');
-	
-	//첨부파일 추가 버튼 클릭시
-	document.getElementById('addFileBtn').addEventListener('click', function(){
-		fileInput.click();
-	});
-	
-	//파일 선택시
-	document.getElementById('fileInput').addEventListener('change', function(e){
-		const selectedFile = fileInput.files[0];
-		
-		if(!selectedFile) return;
-		
-		const formData = new FormData();
-		formData.append('file', selectedFile);
-		
-		//AJAX로 서버랑 통신
-		fetch('/user/resume/uploadFile',{
-			method: 'POST',
-			body: formData
-		})
-		.then(response => {
-			if(!response.ok){
-				throw new Error('서버 오류: ' + response.status);
-			}
-			return response.json();
-		})
-		.then(result => {
-			if(result.result == 'success'){
-				const file = result.file;
-				const container = document.getElementById('fileListContainer');
-				container.innerHTML += `
-					<div class="file-item">
-					<div class="file-info">
-						<div class="file-icon">${file.fileType}</div>
-						<div class="file-details">
-							<div class="file-name">${file.fileName}</div>
-							<div class="file-date">${file.createdAt}</div>
-						</div>
-					</div>
-					<div class="file-actions">
-						<button class="action-btn delete">
-							<i class="fas fa-trash-alt"></i>
-						</button>
-					</div>
-				</div>
-				`;
-			} else{
-				alert('업로드 실패: ' + result);
-			}
-		})
-		.catch(error => {
-			alert('요청 실패 : ' + error.message);
-		})
-	});
-	
-	//삭제버튼 클릭시
-});
+
 </script>
 </html>
