--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -30,10 +30,11 @@
 	    <div class="corp-top-menu">
 	    <!-- GlobalHandler에서 user로 넘겨주고 있다. #authentication으로 securityContextHolder 세션의 객체를 꺼내도 된다. -->
 	    	<div id="userInfo" sec:authorize="hasRole('ROLE_CORP')" >
-		      <a th:href="@{/void}" th:text="${user.email}" class="corp-header-link" style="color: #1abc9c; text-decoration: underline;" onclick="alert('마이페이지 링크입니다.')" ></a> |
+		      <a th:href="@{/void}" th:text="${user.name}" class="corp-header-link" style="color: #1abc9c; text-decoration: underline;" onclick="alert('마이페이지 링크입니다.')" ></a> |
 		      <a th:href="@{/logout}" class="corp-header-link">로그아웃</a> |
 		      <a th:href="@{/void}" class="corp-header-link">고객센터</a>
 	    	</div>
+	    	<!-- sec:authorize는 내부적으로 SecurityContext에서 현재 사용자의 인증 상태를 확인 : 비로그인 상태인 경우, 내부적으로 ROLE_ANONYMOUS 권한이 부여, 따라서 오류 안남 -->
 	    	<div sec:authorize="!hasRole('ROLE_CORP')"  >
 		      <a th:href="@{/login}" class="corp-header-link">로그인</a> |
 		      <a th:href="@{/corp/join}" class="corp-header-link">회원가입</a> |
