--- a/src/main/resources/templates/admin/admin_login.html
+++ b/src/main/resources/templates/admin/admin_login.html
@@ -20,7 +20,7 @@
         
         <div class="error-message" th:if="${error}" th:text="${error}"></div>
         
-        <form th:action="@{/admin/login}" method="post">
+        <form th:action="@{/admin/login_process}" method="post">
             <div class="form-group">
                 <label class="form-label">아이디</label>
                 <input type="text" name="username" class="form-input" placeholder="Enter your ID" required>
