--- a/src/main/resources/templates/user/main_page.html
+++ b/src/main/resources/templates/user/main_page.html
@@ -115,7 +115,7 @@ setInterval(() => moveSlide(1), 5000);
    <div class="user-info-box">
         <div class="user-header">
             <div class="user-text">
-                <p class="user-welcome">유연수님 반가워요</p>
+                <p class="user-welcome" th:text>유연수님 반가워요</p>
                 <p class="user-email">yeonsu@naver.com</p>
             </div>
             <div class="notification-bell" onclick="toggleNotifications()">
